--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,39 @@
 <!doctype html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="/dist/output.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/dist/output.css" rel="stylesheet">
 </head>
+
 <body>
-    
+
     <div class="flex flex-col justify-center items-center h-screen bg-background">
-        <div class="flex pt-6 -ml-40">
+        <div class="pt-6 -ml-40">
             <img src="../image/MagkahiOSA Logo (1).png" alt="Logo" class="h-16 mt-2 absolute -ml-10 -top-1">
-        <img src="../image/MagkahiOSA Logo (2).png" alt="Logo text" class="h-48 w-48 absolute -top-14">
+            <img src="../image/MagkahiOSA Logo (2).png" alt="Logo text" class="h-48 w-48 absolute -top-14">
         </div>
 
-        <div class="w-screen hidden-border rounded-md md:w-[40%] md: h-[80%] bg-white my-22 py-2 mt-18 shadow-2xl drop-shadow-2xl" >
+        <div class="w-screen rounded-md md:w-[35%] md: h-[70%] bg-white my-22  mt-18 shadow-2xl drop-shadow-2xl">
             <p class="ml-20 mt-10 font-semibold text-2xl">Login to your account</p>
             <form action="#">
-                <p class=" ml-20 mt-14 text-[12px]">Email Address</p>
-                <input type="text" placeholder="Email Address" class="border ml-20 h-10 rounded-md pl-4 mt-2 w-[70%] focus:outline-border-color" >
-                <p class="ml-20 mt-6 text-[12px]">Password</p>
-                <input type="text" placeholder="Password" class="border ml-20 h-10 rounded-md pl-4 mt-2 w-[70%] focus:outline-border-color" >
-                <button class="text-white bg-login block w-[70%] ml-20 mt-14 py-3 rounded-lg hover:bg-yellow hover:text-black font-semibold">Login</button>
-            </form>  
-            <div class="leading-3 mt-6">      
+                <label class="ml-20 mt-9 text-[12px] block">Email Address</label>
+                <input type="text" placeholder="Email Address"
+                    class="border mx-20 h-10 rounded-md pl-4 mt-2 w-[70%] focus:outline-border-color">
+                <label class="ml-20 mt-4 text-[12px] block">Password</label>
+                <input type="text" placeholder="Password"
+                    class="border mx-20 h-10 rounded-md pl-4 mt-2 w-[70%] focus:outline-border-color">
+                <button
+                    class="text-white bg-login block w-[70%] ml-20 mt-10 py-3 rounded-lg hover:bg-yellow hover:text-black font-semibold">Login</button>
+            </form>
+            <div class="leading-3 mt-6">
                 <a class="text-[11px] hover:text-border-color ml-20" href="../src/page2.html">Forgot your password?</a>
                 <p class="text-[11px] ml-20">Contact your administrator</p>
-            </div>          
+            </div>
         </div>
     </div>
-  
+
 </body>
+
 </html>
